// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LeftSidebar - Snapshots > matches snapshot with all filters in different states 1`] = `
<div
  class="hidden w-(--filter-bar-width) flex-col items-start justify-start gap-6 lg:flex"
  data-testid="left-sidebar"
>
  <div
    data-testid="filter-reach"
  >
    <button>
      All
    </button>
  </div>
  <div
    data-testid="filter-sort"
  >
    <button>
      Recent
    </button>
  </div>
  <div
    class="sticky top-[100px] flex flex-col gap-6 self-start"
  >
    <div
      data-testid="filter-root"
    >
      <button>
        All
      </button>
    </div>
    <div
      data-testid="filter-root"
    >
      <button>
        Columns
      </button>
    </div>
  </div>
</div>
`;

exports[`LeftSidebar - Snapshots > matches snapshot with custom className 1`] = `
<div
  class="hidden w-(--filter-bar-width) flex-col items-start justify-start gap-6 lg:flex custom-sidebar"
  data-testid="left-sidebar"
>
  <div
    data-testid="filter-reach"
  >
    <button>
      All
    </button>
  </div>
  <div
    data-testid="filter-sort"
  >
    <button>
      Recent
    </button>
  </div>
  <div
    class="sticky top-[100px] flex flex-col gap-6 self-start"
  >
    <div
      data-testid="filter-root"
    >
      <button>
        All
      </button>
    </div>
    <div
      data-testid="filter-root"
    >
      <button>
        Columns
      </button>
    </div>
  </div>
</div>
`;

exports[`LeftSidebar - Snapshots > matches snapshot with default props 1`] = `
<div
  class="hidden w-(--filter-bar-width) flex-col items-start justify-start gap-6 lg:flex"
  data-testid="left-sidebar"
>
  <div
    data-testid="filter-reach"
  >
    <button>
      All
    </button>
  </div>
  <div
    data-testid="filter-sort"
  >
    <button>
      Recent
    </button>
  </div>
  <div
    class="sticky top-[100px] flex flex-col gap-6 self-start"
  >
    <div
      data-testid="filter-root"
    >
      <button>
        All
      </button>
    </div>
    <div
      data-testid="filter-root"
    >
      <button>
        Columns
      </button>
    </div>
  </div>
</div>
`;

exports[`LeftSidebar - Snapshots > matches snapshot with different filter states 1`] = `
<div
  class="hidden w-(--filter-bar-width) flex-col items-start justify-start gap-6 lg:flex"
  data-testid="left-sidebar"
>
  <div
    data-testid="filter-reach"
  >
    <button>
      All
    </button>
  </div>
  <div
    data-testid="filter-sort"
  >
    <button>
      Recent
    </button>
  </div>
  <div
    class="sticky top-[100px] flex flex-col gap-6 self-start"
  >
    <div
      data-testid="filter-root"
    >
      <button>
        All
      </button>
    </div>
    <div
      data-testid="filter-root"
    >
      <button>
        Columns
      </button>
    </div>
  </div>
</div>
`;
